--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.application.name=EmployeePayrollApp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root
-spring.datasource.password=Kunal@69796
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
