--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=EmployeePayrollApp
 
-
+#For H2 Database
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
@@ -8,13 +8,7 @@ spring.application.name=EmployeePayrollApp
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 
-
-
-# MySQL Database
-
-
-
-
+# For MySQL Database
 spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root
 spring.datasource.password=${password}
